@@ -1,6 +1,6 @@
 /* -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8 -*- */
 /*
- * Copyright (C) 2003 Imendio HB
+ * Copyright (C) 2003-2004 Imendio HB
  * Copyright (C) 2002 CodeFactory AB
  * Copyright (C) 2002 Richard Hult <richard@imendio.com>
  * Copyright (C) 2002 Mikael Hallendal <micke@imendio.com>
@@ -489,7 +489,7 @@ gantt_view_create_widget (PlannerView *view)
 	tree = planner_task_tree_new (view->main_window,
 				 PLANNER_GANTT_MODEL (model),
 				 FALSE,
-				 COL_ID,         _("\nWBS"),
+				 COL_WBS,        _("\nWBS"),
 				 COL_NAME,       _("\nName"),
 				 /*COL_START,    _("\nStart"),*/
 				 COL_WORK,       _("\nWork"), 
